// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BED parser BED3 1`] = `
Object {
  "chrom": "contigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "strand": 0,
}
`;

exports[`BED parser BED3 2`] = `
Object {
  "chrom": "co,tigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "strand": 0,
}
`;

exports[`BED parser BED6 1`] = `
Object {
  "chrom": "contigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "name": "test",
  "score": 0.5,
  "strand": -1,
}
`;

exports[`BED parser BED6 2`] = `
Object {
  "chrom": "co,tigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "name": "test2",
  "score": 0,
  "strand": 1,
}
`;

exports[`BED parser BED6 3`] = `
Object {
  "chrom": "cotigA",
  "chromEnd": 10884,
  "chromStart": 10875,
  "name": "test2",
  "strand": 0,
}
`;

exports[`BED parser BED12 1`] = `
Object {
  "blockCount": 2,
  "blockSizes": Array [
    567,
    488,
  ],
  "blockStarts": Array [
    0,
    3512,
  ],
  "chrom": "chr22",
  "chromEnd": 5000,
  "chromStart": 1000,
  "itemRgb": "0",
  "name": "cloneA",
  "score": 960,
  "strand": 1,
  "thickEnd": 5000,
  "thickStart": 1000,
}
`;

exports[`BED parser BED12 2`] = `
Object {
  "blockCount": 2,
  "blockSizes": Array [
    433,
    399,
  ],
  "blockStarts": Array [
    0,
    3601,
  ],
  "chrom": "chr22",
  "chromEnd": 6000,
  "chromStart": 2000,
  "itemRgb": "0",
  "name": "cloneB",
  "score": 900,
  "strand": -1,
  "thickEnd": 6000,
  "thickStart": 2000,
}
`;

exports[`bigChain bigChain 1`] = `
Object {
  "chainScore": 66,
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 133710,
  "chromStart": 133689,
  "name": "530549",
  "qEnd": 80144725,
  "qName": "chr16",
  "qSize": 98207768,
  "qStart": 80144720,
  "score": 1000,
  "strand": -1,
  "tSize": 150754,
}
`;

exports[`bigGenePred bigGenePred 1`] = `
Object {
  "blockCount": 3,
  "blockSizes": Array [
    359,
    109,
    1189,
  ],
  "cdsEndStat": "none",
  "cdsStartStat": "none",
  "chrom": "chr1",
  "chromEnd": 14409,
  "chromStart": 11868,
  "chromStarts": Array [
    0,
    744,
    1352,
  ],
  "exonFrames": Array [
    -1,
    -1,
    -1,
  ],
  "geneName": "ENST00000456328.2",
  "geneName2": "DDX11L1",
  "geneType": "none",
  "name": "ENST00000456328.2",
  "name2": "DDX11L1",
  "reserved": "255,128,0",
  "score": 1000,
  "strand": 1,
  "thickEnd": 11868,
  "thickStart": 11868,
  "type": "none",
}
`;

exports[`bigGenePred bigGenePred 2`] = `
Object {
  "blockCount": 11,
  "blockSizes": Array [
    98,
    34,
    152,
    159,
    198,
    136,
    137,
    147,
    99,
    154,
    37,
  ],
  "cdsEndStat": "none",
  "cdsStartStat": "none",
  "chrom": "chr1",
  "chromEnd": 29570,
  "chromStart": 14403,
  "chromStarts": Array [
    0,
    601,
    1392,
    2203,
    2454,
    2829,
    3202,
    3511,
    3864,
    10334,
    15130,
  ],
  "exonFrames": Array [
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
    -1,
  ],
  "geneName": "ENST00000488147.1",
  "geneName2": "WASH7P",
  "geneType": "none",
  "name": "ENST00000488147.1",
  "name2": "WASH7P",
  "reserved": "255,128,0",
  "score": 1000,
  "strand": -1,
  "thickEnd": 14403,
  "thickStart": 14403,
  "type": "none",
}
`;

exports[`bigInteract bigInteract 1`] = `
Object {
  "chrom": "chr3",
  "chromEnd": 63705638,
  "chromStart": 63702628,
  "color": "0",
  "score": 584,
  "sourceChrom": "chr17",
  "sourceEnd": 58880897,
  "sourceStart": 58878552,
  "strand": 0,
  "targetChrom": "chr3",
  "targetEnd": 63705638,
  "targetStart": 63702628,
  "value": "10",
}
`;

exports[`bigLink bigLink 1`] = `
Object {
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 7918,
  "chromStart": 7917,
  "name": "2912",
  "qStart": 75185566,
  "strand": 0,
}
`;

exports[`bigMaf bigMaf 1`] = `
Object {
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 2,
  "chromStart": 0,
  "mafBlock": "a score=60.000000;s hg38.chr22_KI270731v1_random        0 2 +   150754 AC;s canFam3.chr26                27974205 2 + 38964690 AT;",
  "strand": 0,
}
`;

exports[`bigNarrowPeak 1`] = `
Object {
  "chrom": "chr1",
  "chromEnd": 566953,
  "chromStart": 566753,
  "pValue": 5.54347,
  "peak": 154,
  "qValue": 4.80079,
  "score": 468,
  "signalValue": 103.84,
  "strand": 0,
}
`;

exports[`bigNarrowPeak 2`] = `
Object {
  "chrom": "chr1",
  "chromEnd": 566953,
  "chromStart": 566753,
  "pValue": 5.54347,
  "peak": 154,
  "qValue": 4.80079,
  "score": 468,
  "signalValue": 103.84,
  "strand": 0,
  "uniqueId": 1,
}
`;

exports[`bigPsl bigPsl 1`] = `
Object {
  "blockCount": 3,
  "blockSizes": Array [
    354,
    109,
    1141,
  ],
  "chrom": "chr1",
  "chromEnd": 14361,
  "chromSize": 248956422,
  "chromStart": 11873,
  "chromStarts": Array [
    0,
    739,
    1347,
  ],
  "match": 1579,
  "misMatch": 25,
  "nCount": 0,
  "name": "mAM992877",
  "oCDS": "",
  "oChromEnd": 1604,
  "oChromSize": 1604,
  "oChromStart": 0,
  "oChromStarts": Array [
    0,
    354,
    463,
  ],
  "oSequence": "",
  "oStrand": "+",
  "repMatch": 0,
  "reserved": 0,
  "score": 1000,
  "seqType": 0,
  "strand": 1,
  "thickEnd": 14361,
  "thickStart": 11873,
}
`;

exports[`bigPsl bigPsl 2`] = `
Object {
  "blockCount": 3,
  "blockSizes": Array [
    354,
    109,
    1141,
  ],
  "chrom": "chr1",
  "chromEnd": 14361,
  "chromSize": 248956422,
  "chromStart": 11873,
  "chromStarts": Array [
    0,
    739,
    1347,
  ],
  "match": 1579,
  "misMatch": 25,
  "nCount": 0,
  "name": "mAM992877",
  "oCDS": "365..502",
  "oChromEnd": 1604,
  "oChromSize": 1604,
  "oChromStart": 0,
  "oChromStarts": Array [
    0,
    354,
    463,
  ],
  "oSequence": "cttgccgtcagccttttctttgacctcttctttctgttcatgtgtatctgctgtctcttagcccagacttcccgtgtcctttccaccgggcctttgggaggtcacagggtcttgatgctgtggtcttgatctgcaggtgtctgacttccagcaactgctggcctgtgccagggtggaagctgagcactggagtggagttttcctgtggagaggagccatgcctagagtgggatgggccattgttcatattctggcccctgttgtctgcatgtaacctaataccacgaccaggcatgggggaaagattggaggaaagttgagtgagaggatcaacttctctgacaacctaggccagtgtgtggtgatgccaggcatgcccttccccagcatcaggtctccagagctgcagaagacgacggccgacttggatcacactcttgtgagtgtccccagtgttgcagaggcagggccatcaggcaccaaagggattctgccagcatagtgctcctggaccagtgatacacccggcaccctgtcctggacaggctgttggcctggatctgagccctcgtggaggtcaaagccacctttggttctgccattactgctgtgtggaagttcactcctgccttttcctttcccgagagcctccaccaccccgagatcgcatttctcactgccttttgtctgcccagtttcaccagaagtaggcctcttcctgacaggcagctgcaccactgcctggcgctgcgcccttcctttgctctgcccgctggagacggtgtttgtcatgggcctggtctgcagggatcctgctacaaaggtgaaacccaggagagtgtggagtccagagtgttgccaggacccaggcacaggcattagtgcccgttggagaaaacaggggaatcccgaagaaatggtgggttttggccatccgtgagatcttcccagggcagctcccctctgtggaatccaatctgtcttccatcctgcgtggccgagggccaggcttctcactgggcctctgcaggaggctgccatttgtcctgcccaccgtcttagaagcgagacggagcagactcatctgctactgccctttctataataactaaagttagctgccctggactattcaccccctagtctcaatttaaaaagatccccatggccacagggcccctgcctgggggcttgtcacctcccccaccttcttcctgagtcacttctgcagccttgctccctaacctgccccacagccttgcctggatttctatctccctggcttggtgccagttcctccaagtcgatggcacctccctccctctcaaccacttgagcaaactccaagacatcttctaccccaacaccagcaattgtgccaagggccattaggctctcagcatgactatttttagagaccccgtgtctgtcactgaaaccttttttgtgggagactattcctcccatctgcaacagctgcccctgctgacggcccttctctcctccctctcatcccagagaaacaggtcagctgggagcttctgcccccactgcctagggaccaacaggggcaggaggcagtcactgaccccgagacgtttgca",
  "oStrand": "+",
  "repMatch": 0,
  "reserved": 0,
  "score": 1000,
  "seqType": 1,
  "strand": 1,
  "thickEnd": 13259,
  "thickStart": 12622,
}
`;

exports[`gdc cancer 1`] = `
Object {
  "Entrez_Gene_Id": "2782",
  "Hugo_Symbol": "GNB1",
  "Matched_Norm_Sample_Barcode": "TCGA-OR-A5KB-11A-11D-A30A-10",
  "Reference_Allele": "T",
  "Tumor_Sample_Barcode": "TCGA-OR-A5KB-01A-11D-A30A-10",
  "Tumor_Seq_Allele1": "T",
  "Tumor_Seq_Allele2": "G",
  "Variant_Classification": "Splice_Region",
  "Variant_Type": "SNP",
  "alcohol_history": "--",
  "alcohol_intensity": "--",
  "blockCount": 1,
  "blockSizes": Array [
    1,
  ],
  "bmi": "--",
  "case_id": "09454ed6-64bc-4a35-af44-7c4344623d45",
  "chrom": "chr1",
  "chromEnd": 10,
  "chromStart": 1,
  "chromStarts": Array [
    0,
  ],
  "cigarettes_per_day": "--",
  "days_to_death": "--",
  "dbSNP_RS": "novel",
  "dbSNP_Val_Status": "",
  "ethnicity": "not hispanic or latino",
  "freq": "0.0108695652174",
  "gender": "female",
  "height": "--",
  "name": "T>G",
  "project_id": "TCGA-ACC",
  "reserved": "0,0,0",
  "sampleCount": "1",
  "score": 1,
  "strand": 0,
  "thickEnd": 1815757,
  "thickStart": 1815756,
  "weight": "--",
  "years_smoked": "--",
}
`;

exports[`mafFrames mafFrames 1`] = `
Object {
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 12574,
  "chromStart": 11287,
  "frame": "0",
  "isExonEnd": "1",
  "isExonStart": "1",
  "name": "ENST00000619792.1",
  "nextFramePos": -1,
  "prevFramePos": -1,
  "src": "hg38",
  "strand": -1,
}
`;

exports[`mafSummary mafSummary 1`] = `
Object {
  "chrom": "chr22_KI270731v1_random",
  "chromEnd": 9270,
  "chromStart": 0,
  "leftStatus": "",
  "rightStatus": "",
  "score": 0.568679,
  "src": "canFam3",
  "strand": 0,
}
`;

exports[`real world 1`] = `
Object {
  "comment": "UCSC Genes for chr7 with color plus GeneSymbol and SwissProtID",
  "fields": Array [
    Object {
      "comment": "Reference sequence chromosome or scaffold",
      "name": "chrom",
      "type": "string",
    },
    Object {
      "comment": "Start position of feature on chromosome",
      "isNumeric": true,
      "name": "chromStart",
      "type": "uint",
    },
    Object {
      "comment": "End position of feature on chromosome",
      "isNumeric": true,
      "name": "chromEnd",
      "type": "uint",
    },
    Object {
      "comment": "Name of gene",
      "name": "name",
      "type": "string",
    },
    Object {
      "comment": "Score",
      "isNumeric": true,
      "name": "score",
      "type": "uint",
    },
    Object {
      "comment": "+ or - for strand",
      "name": "strand",
      "size": 1,
      "type": "char",
    },
    Object {
      "comment": "Coding region start",
      "isNumeric": true,
      "name": "thickStart",
      "type": "uint",
    },
    Object {
      "comment": "Coding region end",
      "isNumeric": true,
      "name": "thickEnd",
      "type": "uint",
    },
    Object {
      "comment": "Green on + strand, Red on - strand",
      "isNumeric": true,
      "name": "reserved",
      "type": "uint",
    },
    Object {
      "comment": "Gene Symbol",
      "name": "geneSymbol",
      "type": "string",
    },
    Object {
      "comment": "SWISS-PROT protein Accession number",
      "name": "spID",
      "type": "string",
    },
  ],
  "name": "hg18KGchr7",
  "type": "table",
}
`;
